2004-07-20  Werner Koch  <wk@gnupg.org>

	* cert.c (_ksba_cert_get_issuer_dn_ptr): Renamed to ..
	(_ksba_cert_get_subject_dn_ptr): .. this.  And return the
	subject's DN.
	* ocsp.c (issuer_name_hash): Use it here.  Thanks to Bernhard
	Herzog for pointing this out.  It revealed itself only in a
	multi-level certificate chain.

2004-06-08  Werner Koch  <wk@gnupg.org>

	* certreq.c (ksba_certreq_add_extension): Removed unused variable.

2004-06-06  Werner Koch  <wk@gnupg.org>

	* ksba.h: Comment cleanups.

	* certreq.c (ksba_certreq_add_extension): New.

2004-04-28  Werner Koch  <wk@gnupg.org>

	* libksba.vers: Add new functions.

	* crl.h (crl_extn_s, crl_extn_t): New.
	(ksba_crl_s): Add member EXTENSION_LIST;
	* crl.c (ksba_crl_release): Free an extension list.
	(parse_one_extension, store_one_extension): New.
	(parse_crl_extensions): Store extensions.
	(ksba_crl_get_extension, ksba_crl_get_auth_key_id)
	(ksba_crl_get_crl_number): New.

2004-04-06  Werner Koch  <wk@gnupg.org>

	* cms.c (ksba_cms_add_smime_capability): Oops, we forgot to store
	the parameters.
	* writer.c (do_writer_write): Fixed memory allocation and added an
	extra check.

2004-03-24  Werner Koch  <wk@gnupg.org>

	* cms.c (ksba_cms_add_smime_capability): New.
	(ksba_cms_release): Free the capability list.
	(store_smime_capability_sequence): New.
	(build_signed_data_attributes): Include the smime capabilities.
	* cms.h (oidparmlist_s): New.
	(ksba_cms_s): Add element CAPABILITY_LIST.
	* der-encoder.c (_ksba_der_store_sequence): New.
	* asn1-func.c (_ksba_asn_is_primitive): New dummy type PRE_SEQUENCE.
	* der-encoder.c (set_nhdr_and_len, copy_nhdr_and_len): Support it.

2004-03-17  Werner Koch  <wk@gnupg.org>

	* ber-help.c (_ksba_ber_parse_tl): Check for length overflow.
	(_ksba_ber_read_tl): Ditto.

2004-03-16  Werner Koch  <wk@gnupg.org>

	* ocsp.c (ksba_ocsp_get_responder_id, ksba_ocsp_get_cert): New.

2004-03-15  Werner Koch  <wk@gnupg.org>

	* Makefile.am: Support for version scripts.